<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".AddVacancyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vacancy_name_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vacancy_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_add_vacancy_body_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:counterEnabled="true"
                app:counterMaxLength="300"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:gravity="top"
                    android:hint="@string/vacancy_body" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_add_vacancy_city_textInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vacancy_city" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/age"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/activity_add_age_from_editText"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:hint="18"
                    android:inputType="numberDecimal"
                    android:maxEms="2"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/from"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/activity_add_age_to_editText"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:hint="30"
                    android:inputType="numberDecimal"
                    android:linksClickable="false"
                    android:maxEms="2"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/to"
                    android:textSize="15sp" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="ხელფასი"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/activity_add_salary_from_editText"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:hint="100"
                    android:inputType="numberDecimal"
                    android:maxEms="5"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/from"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/activity_add_salary_to_editText"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:hint="500"
                    android:inputType="numberDecimal"
                    android:maxEms="8"
                    android:minEms="2"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:gravity="center_vertical"
                    android:text="@string/to"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vacancy_category"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/activity_add_vacancy_category_spinner"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:entries="@array/vacancy_category_spinner_array"
                android:gravity="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vacancy_requirements_header"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_add_vacancy_requirements_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/activity_add_vacancy_requirements_editText"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="10"
                    android:hint="@string/vacancy_requirements_header" />

                <Button
                    android:id="@+id/activity_add_requirements_to_textview_button"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_add_circle_black_24dp"
                    android:textSize="20sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/starts" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ends" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/activity_add_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/sheet_dialog_background"
                    android:gravity="center"
                    android:text="15 Dec"
                    android:textColor="@android:color/holo_green_light"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/activity_add_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/sheet_dialog_background"
                    android:gravity="center"
                    android:text="@string/choose"
                    android:textColor="@android:color/holo_red_dark"
                    android:textStyle="bold" />
            </LinearLayout>


            <Button
                android:id="@+id/activity_add_add_vacancy_button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/sheet_dialog_background"
                android:onClick="addVacancy"
                android:text="@string/upload"
                android:textColor="#202020" />


        </LinearLayout>


    </ScrollView>
</LinearLayout>